# ActRealm

./: .gitignore  AGENTS.md  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html
.github/workflows/: actrealm-language.yml  ci.yml  pages.yml  release-macos.yml  static.yml
apps/macos/: AGENTS.md  Package.swift  README.md
apps/macos/Resources/: ActRealm.icns  Info.plist
apps/macos/Scripts/: generate-app-icon.swift  package-app.sh  resolve-sdk.sh  test.sh
apps/windows/: README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/tests/: m0_hook.rs  m1_runtime_integration.rs  m2_widget_e2e.rs  m3_install_cli.rs  m4_cli.rs  m5_pass_through.rs  m5_performance.rs  m5_security.rs  m6_m8_resource.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs  unix.rs
crates/bridge/tests/: m0_transport.rs  m5_security.rs
crates/codex-connector/: Cargo.toml
crates/codex-connector/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: m0_contract.rs
crates/installer/: Cargo.toml
crates/installer/src/: lib.rs
crates/installer/tests/: m3_installer.rs  m4_statusline.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs
crates/providers/tests/: provider_contract.rs
crates/quota/: Cargo.toml
crates/quota/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: diagnostics.rs  fsutil.rs  instance.rs  lib.rs  spool.rs  storage.rs  title.rs  waiter.rs
crates/runtime/tests/: m1_runtime.rs  m4_data.rs  m5_diagnostics.rs  m5_metrics.rs  m5_redaction.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  server.rs
crates/server/tests/: m2_api.rs  m5_performance.rs  manual_preview.rs
crates/usage/: Cargo.toml
crates/usage/src/: lib.rs  pricing_snapshot.json
docs/: FRONTEND_DESIGN_ALIGNMENT.md  M0_PROVIDER_REPORT.md  M0_VERIFICATION.md  M10_M12_VERIFICATION.md  M13_PROVIDER_STATE_COORDINATION.md  M14_USAGE_CONTEXT_QUOTA.md  M15_CODEX_MANAGED_APPROVALS.md  M1_VERIFICATION.md  M2_VERIFICATION.md  M3_VERIFICATION.md  M4_VERIFICATION.md  M5_VERIFICATION.md  M8_VERIFICATION.md  NATIVE_CLIENT_ARCHITECTURE.md  POST_M14_CODEX_INTERNAL_SESSION_FILTERING.md  POST_M14_FIRST_RUN_ONBOARDING.md  POST_M14_MACOS_WEB_PARITY.md  POST_M14_PROVIDER_LIFECYCLE_PROJECTION.md  POST_M14_REALTIME_RECOVERY.md  POST_M14_USAGE_OAUTH_HARDENING.md  REFERENCE_REVIEW.md  STATUS.md  USER_GUIDE_zh-CN.md  V1_1_FUNCTIONAL_CORRECTIONS.md  V1_ACCEPTANCE.md  WIDGET_V1_PLAN.md
docs/reports/: ACTREALM_50B891A_TO_P0_IMPROVEMENT_REPORT_2026-07-23.md  ACTREALM_GLOBAL_RELEASE_AUDIT_2026-07-22.md  ACTREALM_OUTBOX_QUOTA_REGRESSION_2026-07-23.md  ACTREALM_P0_REMEDIATION_VERIFICATION_2026-07-22.md  ACTREALM_P1_CI_M15_REMEDIATION_2026-07-23.md
fixtures/claude/2.1.210/: fixture-set.json  permission-request.json  pre-tool-use.json  session-start.json  stop.json  user-prompt-submit.json
fixtures/codex/0.144.2/: rate-limits-rollout.jsonl
fixtures/codex/0.144.4/: fixture-set.json  permission-request.json  post-tool-use.json  pre-tool-use.json  session-start.json  stop.json  user-prompt-submit.json
scripts/: check-actrealm-language.sh  m0-e2e.sh  m5-resource-check.sh
shared/contracts/: README.md  foreground-scheduling.schema.json
web/: app.css  app.js  index.html
(+46 files in other folders)
