[package]
name = "flow-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
flow-agent-bridge = { path = "../bridge" }
flow-agent-core = { path = "../core" }
libc.workspace = true
serde_json.workspace = true
