[package]
name = "actrealm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
actrealm-bridge = { path = "../bridge" }
actrealm-core = { path = "../core" }
actrealm-installer = { path = "../installer" }
actrealm-quota = { path = "../quota" }
actrealm-runtime = { path = "../runtime" }
actrealm-server = { path = "../server" }
actrealm-usage = { path = "../usage" }
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
