[package]
name = "flow-agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
flow-agent-core = { path = "../core" }
flow-agent-providers = { path = "../providers" }
libc.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
