[package]
name = "actrealm-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
actrealm-core = { path = "../core" }
actrealm-providers = { path = "../providers" }
libc.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
