[package]
name = "actrealm-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
actrealm-installer = { path = "../installer" }
actrealm-codex-connector = { path = "../codex-connector" }
actrealm-core = { path = "../core" }
actrealm-quota = { path = "../quota" }
actrealm-runtime = { path = "../runtime" }
actrealm-usage = { path = "../usage" }
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.29.0"
tower = { version = "0.5", features = ["util"] }
